07-03-2019 - 13-03-2019
- CSS variabelen gebruikt om kleurwaardes vast te leggen en deze ook overgenomen inJS.
- Header en footer toegevoegd.
- Custom fonts gebruikt.
- Aantal worpen; tekst veranderd in custom progress bar.
- Intopagina met 3D-element toegevoegd.
- Linkpagina met uitleg toegevoegd.
- 'Font Awesome' icoon gebruikt.
- Dobbelgeluid toegevoegd.
- Bugfix: dobbel-button werd na afloop van het spel niet gedisabled als de laatste ronde minder dan 3 worpen duurde.
- Twee wisselende icoontjes (aan/uit) toegevoegd om geluid aan of uit te zetten.
- Layout absoluut gepositioneerde iconen linksboven aangepast; onder elkaar i.p.v. naast elkaar vanwege overlap met header bij minimale breedte scherm.
- Geluidsfragment altijd opnieuw laden bij afspelen (nodig omdat opnieuw afspelen anders niet werkt als het geluidsfragment nog loopt)


01-03-2019 - 06-03-2019
- Maximaal gebruik gemaakt van flexbox om de layout te optimaliseren.
- Fontsize van 'px' naar 'em' omgezet.
- JS: DOM-elementen in variabelen gezet i.v.m. performance.
- RegExp gebruikt om mogelijke scores te berekenen.
