@@ -20,6 +20,7 @@
     <a href="uitleg.html" target="_blank"><i class="far fa-question-circle fa-lg"></i></a>
     <i id="volumeMax" class="fas fa-volume-up fa-lg"></i>
     <i id="volumeMin" class="fas fa-volume-off fa-lg"></i>
+    <i id= "refresh" class="fas fa-redo fa-lg"></i>
   </div>
 
   <header>Yahtzee!</header>
@@ -39,7 +40,6 @@
           <div class="worp" id="worp3"></div>
         </div>
       </div>
-      <button id="btnPlayAgain">Begin opnieuw</button>
     </div>
     <div class="container">
       <table>
@@ -114,7 +114,7 @@
       </table>
     </div>
   </main>
-  <footer>© <a href="mailto:oegehidddema@gmail.com">Oege Hiddema</a> , versie: 12-3-2019 08:07</footer>
+  <footer>© <a href="mailto:oegehidddema@gmail.com">Oege Hiddema</a> , versie: 12-3-2019 11:53</footer>
 </body>
 
 </html>
